test/expressions/bradc/isTrueOnIntNoFn.good
isTrueOnIntNoFn.chpl:5: error: short-circuiting logical operators not supported on integers
