test/expressions/bradc/isTrueOnIntNoFn.chpl

  var x = 0;
  var y = 1;

  writeln(x || y);
  writeln(x && y);

